[gd_scene load_steps=2 format=3 uid="uid://br32p2xf8taid"]

[ext_resource type="Script" path="res://ConfigEditor/CardListScene.gd" id="1_jgicd"]

[node name="CardListScene" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jgicd")

[node name="DeckName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Bonus souls"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NewKeyEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter new key"
expand_to_text_length = true

[node name="AddKeyButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = " Add	 "

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Keys" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="HBoxContainer/AddKeyButton" to="." method="_on_add_key_button_pressed"]
